--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ ipython = "^8.26.0"
 pyspark = "^3.4.0"
 azure-storage-file-datalake = "^12.16.0"
 azure-identity = "^1.17.1"
+asyncio = "^3.4.3"
 
 [tool.ruff]
 line-length = 120
